[gd_scene load_steps=33 format=2]

[ext_resource path="res://addons/material_spray/painter.gd" type="Script" id=1]
[ext_resource path="res://addons/material_spray/shaders/view2texture.shader" type="Shader" id=2]
[ext_resource path="res://addons/material_spray/shaders/texture2view.shader" type="Shader" id=3]
[ext_resource path="res://addons/material_spray/shaders/texturemap.shader" type="Shader" id=4]
[ext_resource path="res://addons/material_spray/shaders/texture2view_lsb.shader" type="Shader" id=5]
[ext_resource path="res://addons/material_spray/shaders/seams.shader" type="Shader" id=6]
[ext_resource path="res://addons/material_spray/shaders/apply_seams.shader" type="Shader" id=7]
[ext_resource path="res://addons/material_spray/shaders/paint.shader" type="Shader" id=8]
[ext_resource path="res://addons/material_spray/icons/line.png" type="Texture" id=9]
[ext_resource path="res://addons/material_spray/shaders/init_albedo.shader" type="Shader" id=10]
[ext_resource path="res://Suzanne_albedo.png" type="Texture" id=11]
[ext_resource path="res://addons/material_spray/shaders/init_mr.shader" type="Shader" id=12]
[ext_resource path="res://Suzanne_mr.png" type="Texture" id=13]

[sub_resource type="CubeMesh" id=1]

size = Vector3( 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=2]

shader = ExtResource( 2 )

[sub_resource type="ViewportTexture" id=20]


[sub_resource type="ShaderMaterial" id=4]

shader = ExtResource( 3 )
shader_param/model_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.9 )
shader_param/fovy_degrees = 70.0
shader_param/z_near = 0.05
shader_param/z_far = 25.0
shader_param/aspect = 1.77115
shader_param/view2texture = SubResource( 20 )

[sub_resource type="ShaderMaterial" id=5]

shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=6]

shader = ExtResource( 5 )
shader_param/model_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.9 )
shader_param/fovy_degrees = 70.0
shader_param/z_near = 0.05
shader_param/z_far = 25.0
shader_param/aspect = 1.77115
shader_param/view2texture = SubResource( 20 )

[sub_resource type="ViewportTexture" id=21]


[sub_resource type="ShaderMaterial" id=8]

shader = ExtResource( 6 )
shader_param/tex = SubResource( 21 )

[sub_resource type="ViewportTexture" id=9]


[sub_resource type="ViewportTexture" id=10]


[sub_resource type="ShaderMaterial" id=11]

shader = ExtResource( 7 )
shader_param/tex = SubResource( 10 )
shader_param/seams = SubResource( 9 )

[sub_resource type="ViewportTexture" id=12]


[sub_resource type="ShaderMaterial" id=13]

shader = ExtResource( 7 )
shader_param/tex = SubResource( 12 )
shader_param/seams = SubResource( 9 )

[sub_resource type="ViewportTexture" id=22]


[sub_resource type="ViewportTexture" id=23]


[sub_resource type="ShaderMaterial" id=16]

shader = ExtResource( 8 )
shader_param/brush_pos = Vector2( 0.635082, 0.737864 )
shader_param/brush_ppos = Vector2( 0.635082, 0.737864 )
shader_param/brush_size = Vector2( 0.195771, 0.346741 )
shader_param/brush_strength = 0.999
shader_param/brush_color = Color( 1, 1, 1, 1 )
shader_param/brush_channelmask = Color( 1, 1, 1, 1 )
shader_param/pattern_scale = 1.0
shader_param/tex2view_tex = SubResource( 21 )
shader_param/tex2viewlsb_tex = SubResource( 23 )
shader_param/brush_texture = ExtResource( 9 )
shader_param/seams = SubResource( 22 )

[sub_resource type="ShaderMaterial" id=17]

shader = ExtResource( 10 )
shader_param/col = Color( 1, 1, 1, 1 )
shader_param/tex = ExtResource( 11 )

[sub_resource type="ShaderMaterial" id=18]

shader = ExtResource( 8 )
shader_param/brush_pos = Vector2( 0.359436, 0.386963 )
shader_param/brush_ppos = Vector2( 0.359436, 0.386963 )
shader_param/brush_size = Vector2( 0.195771, 0.346741 )
shader_param/brush_strength = 0.999
shader_param/brush_color = Color( 0, 0, 0, 1 )
shader_param/brush_channelmask = Color( 0, 0, 1, 1 )
shader_param/pattern_scale = 1.0
shader_param/tex2view_tex = SubResource( 21 )
shader_param/tex2viewlsb_tex = SubResource( 23 )
shader_param/seams = SubResource( 22 )

[sub_resource type="ShaderMaterial" id=19]

shader = ExtResource( 12 )
shader_param/metallic_mask = Color( 1, 0, 0, 0 )
shader_param/roughness_mask = Color( 0, 1, 0, 0 )
shader_param/metallic = ExtResource( 13 )
shader_param/roughness = ExtResource( 13 )

[node name="Painter" type="Node"]
script = ExtResource( 1 )

[node name="View2Texture" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
keep_3d_linear = true
render_target_v_flip = true
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="View2Texture"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
current = true
far = 25.0

[node name="PaintedMesh" type="MeshInstance" parent="View2Texture"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Texture2View" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
keep_3d_linear = true
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="Texture2View"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 20 )
projection = 1
current = true

[node name="PaintedMesh" type="MeshInstance" parent="Texture2View"]
transform = Transform( 1, -5.09656e-008, 1.56295e-008, 5.09656e-008, 1, 5.78721e-010, -1.56295e-008, -5.78721e-010, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="PaintedMeshWhite" type="MeshInstance" parent="Texture2View"]
transform = Transform( 1, -5.09656e-008, 1.56295e-008, 5.09656e-008, 1, 5.78721e-010, -1.56295e-008, -5.78721e-010, 1, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="Texture2ViewLsb" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
keep_3d_linear = true
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="Texture2ViewLsb"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 20 )
projection = 1
current = true

[node name="PaintedMesh" type="MeshInstance" parent="Texture2ViewLsb"]
transform = Transform( 1, -5.09656e-008, 1.56295e-008, 5.09656e-008, 1, 5.78721e-010, -1.56295e-008, -5.78721e-010, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="Seams" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 1

[node name="SeamsRect" type="ColorRect" parent="Seams"]
material = SubResource( 8 )
margin_right = 2048.0
margin_bottom = 2048.0

[node name="Texture2ViewWithoutSeams" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
disable_3d = true
keep_3d_linear = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 1

[node name="Rect" type="ColorRect" parent="Texture2ViewWithoutSeams"]
material = SubResource( 11 )
margin_right = 2048.0
margin_bottom = 2048.0

[node name="Texture2ViewLsbWithoutSeams" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
disable_3d = true
keep_3d_linear = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 1

[node name="Rect" type="ColorRect" parent="Texture2ViewLsbWithoutSeams"]
material = SubResource( 13 )
margin_right = 2048.0
margin_bottom = 2048.0

[node name="AlbedoPaint" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 1

[node name="PaintRect" type="ColorRect" parent="AlbedoPaint"]
material = SubResource( 16 )
margin_right = 2048.0
margin_bottom = 2048.0

[node name="InitRect" type="ColorRect" parent="AlbedoPaint"]
visible = false
material = SubResource( 17 )
margin_right = 2048.0
margin_bottom = 2048.0

[node name="MRPaint" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 2048, 2048 )
own_world = true
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 1

[node name="PaintRect" type="ColorRect" parent="MRPaint"]
material = SubResource( 18 )
margin_right = 2048.0
margin_bottom = 2048.0
rect_min_size = Vector2( 1024, 1024 )

[node name="InitRect" type="ColorRect" parent="MRPaint"]
visible = false
material = SubResource( 19 )
margin_right = 2048.0
margin_bottom = 2048.0

